# bevy_life

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: 2d_classic.rs  2d_cyclic.rs  2d_cyclic_colors.rs  2d_game_of_life.rs  2d_immigration_game.rs  2d_rainbow_game.rs  2d_rock_paper_scissor.rs  2d_wireworld.rs  3d_game_of_life.rs  common.rs  wireworld.rs
src/: lib.rs
src/components/: mod.rs  new_cell.rs  new_state.rs
src/components/cell/: classic_2d_cell.rs  classic_3d_cell.rs  hexagon_2d_cell.rs  mod.rs  moore_2d_cell.rs  moore_3d_cell.rs  neumann_2d_cell.rs  neumann_3d_cell.rs
src/components/cell_state/: classic_state.rs  conway_state.rs  conway_state_3d.rs  cyclic_color_state.rs  cyclic_state.rs  immigration_state.rs  mod.rs  rainbow_state.rs  wire_world_cell_state.rs  world_wire_state.rs
src/resources/: map.rs  map_builder.rs  materials.rs  mod.rs  rule_set.rs  simulation.rs  simulation_batch.rs  simulation_pause.rs
src/systems/: cells.rs  coloring.rs  mod.rs
