[package]
name = "bevy_life"
version = "0.3.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
license-file = "./LICENSE"
repository = "https://github.com/ManevilleF/bevy_life"
readme = "README.md"
description = "Generic and dynamic cellular automaton lib for bevy"
keywords = ["conway", "bevy", "wireworld", "cellular", "automaton"]
exclude = ["examples", "docs", ".github", ".gitignore", "assets"]
documentation = "http://docs.rs/bevy_life"
categories = ["game-engines", "game-development"]

[features]
default = ["2D"]
2D = []
3D = []
auto-coloring = ["bevy/bevy_sprite"]

[dependencies]
lazy_static = "1.4"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
default-features = false
features = ["bevy_render"]

[dev-dependencies]
rand = "0.8"

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
default-features = false
features = ["render", "bevy_winit", "x11"]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1