[package]
name = "bevy_life"
version = "0.5.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
license-file = "./LICENSE"
repository = "https://github.com/ManevilleF/bevy_life"
readme = "README.md"
description = "Generic and dynamic cellular automaton lib for bevy"
keywords = ["conway", "bevy", "wireworld", "cellular", "automaton"]
exclude = ["examples", "docs", ".github", ".gitignore", "assets"]
documentation = "http://docs.rs/bevy_life"
categories = ["game-engines", "game-development"]

[features]
default = ["2D"]
2D = []
3D = []
auto-coloring = ["bevy/bevy_sprite"]

[dependencies.bevy]
version = "0.8"
default-features = false
features = ["bevy_render"]

[dev-dependencies]
rand = "0.8"

[dev-dependencies.bevy]
version = "0.8"
default-features = false
features = ["render", "bevy_winit", "x11", "bevy_asset"]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[[example]]
name = "2d_cyclic_colors"
path = "examples/2d_cyclic_colors.rs"
required-features = ["auto-coloring", "2D"]

[[example]]
name = "2d_game_of_life"
path = "examples/2d_game_of_life.rs"
required-features = ["auto-coloring", "2D"]

[[example]]
name = "2d_immigration_game"
path = "examples/2d_immigration_game.rs"
required-features = ["auto-coloring", "2D"]

[[example]]
name = "2d_rainbow_game"
path = "examples/2d_rainbow_game.rs"
required-features = ["auto-coloring", "2D"]

[[example]]
name = "3d_game_of_life"
path = "examples/3d_game_of_life.rs"
required-features = ["3D"]

[[example]]
name = "2d_rock_paper_scissor"
path = "examples/2d_rock_paper_scissor.rs"
required-features = ["2D"]