[package]
name = "bevy_life"
version = "0.12.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
license-file = "./LICENSE"
repository = "https://github.com/ManevilleF/bevy_life"
readme = "README.md"
description = "Generic and dynamic cellular automaton lib for bevy"
keywords = ["conway", "bevy", "wireworld", "cellular", "automaton"]
exclude = ["examples", "docs", ".github", ".gitignore", "assets"]
documentation = "http://docs.rs/bevy_life"
categories = ["game-engines", "game-development"]
resolver = "2"

[features]
default = ["2D", "bevy_reflect"]
2D = []
3D = []
auto-coloring = ["bevy/bevy_sprite", "bevy/bevy_color"]
bevy_reflect = ["dep:bevy_reflect"]

[dependencies.bevy]
version = "0.18"
default-features = false
features = ["bevy_render", "bevy_log"]

[dependencies.bevy_reflect]
version = "0.18"
optional = true

[dev-dependencies]
rand = "0.9"

[dev-dependencies.bevy]
version = "0.18"
features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_window",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_color",
    "bevy_render",
    "bevy_sprite",
    "bevy_image",
    "bevy_sprite_render",
    "png",
    "x11",
    "tonemapping_luts",
    "multi_threaded",
    # Faster compilation
    "dynamic_linking",
    "zstd_rust"
]
default-features = false

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[[example]]
name = "2d_cyclic_colors"
path = "examples/2d_cyclic_colors.rs"
required-features = ["auto-coloring", "2D"]

[[example]]
name = "2d_game_of_life"
path = "examples/2d_game_of_life.rs"
required-features = ["auto-coloring", "2D"]

[[example]]
name = "2d_immigration_game"
path = "examples/2d_immigration_game.rs"
required-features = ["auto-coloring", "2D"]

[[example]]
name = "2d_rainbow_game"
path = "examples/2d_rainbow_game.rs"
required-features = ["auto-coloring", "2D"]

[[example]]
name = "3d_game_of_life"
path = "examples/3d_game_of_life.rs"
required-features = ["3D"]

[[example]]
name = "2d_rock_paper_scissor"
path = "examples/2d_rock_paper_scissor.rs"
required-features = ["2D"]
